--- a/src/template.html
+++ b/src/template.html
@@ -15,48 +15,7 @@
         </nav>
     </header>
 
-    <div id="content">
-        <div id="description">
-            Ресторан "Вкусные истории" предлагает уникальный опыт, позволяя гостям не только насладиться вкусной едой, но и узнать больше о культуре и традициях разных стран. Меню разнообразно и включает в себя как классические, так и современные блюда, что делает его привлекательным для широкой аудитории.
-        </div>
-
-        <div id="cards">
-            <figure class="shape-box shape-box_half">
-                <img src="./interior.jpg" alt="">
-                <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
-                <figcaption>
-                    <div class="show-content">
-                        <h3 class="card-title">Тематика</h3>
-                        <p class="card-content">Ресторан посвящен кулинарным традициям разных стран, предлагая блюда, которые рассказывают истории о культуре и кухне этих стран. </p>
-                    </div>
-                </figcaption>
-                <span class="after"></span>
-            </figure>
-            <figure class="shape-box shape-box_half">
-                <img src="./community.jpg" alt="">
-                <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
-                <figcaption>
-                    <div class="show-content">
-                        <h3 class="card-title">Целевая аудитория</h3>
-                        <p class="card-content">Ресторан ориентирован на любителей гастрономических путешествий: семьи, пары и туристы, желающие попробовать что-то новое и необычное.</p>
-                    </div>
-                </figcaption>
-                <span class="after"></span>
-            </figure>
-            <figure class="shape-box shape-box_half">
-                <img src="./specialEvents.jpg" alt="">
-                <div class="brk-abs-overlay z-index-0 bg-black opacity-60"></div>
-                <figcaption>
-                    <div class="show-content">
-                        <h3 class="card-title">Специальные мероприятия</h3>
-                        <p class="card-content">Регулярные кулинарные мастер-классы, дегустации вин и тематические вечера, посвященные определенной стране или кухне.</p>
-                    </div>
-                </figcaption>
-                <span class="after"></span>
-            </figure>
-        </div>
-
-    </div>
+    <div id="content">ПОЧЕМУ ЭТО НЕ ОТОБРАЖАЕТСЯ?</div>
 
     <footer>
         made by <a href="https://github.com/Alexandra-Vikhareva">Vikhareva Alexandra</a> 2025
