Добавлена кнопка Главная

--- a/src/template.html
+++ b/src/template.html
@@ -9,17 +9,21 @@
     <header>
         <h1>Вкусные истории</h1>
         <nav>
-            <button>Главная</button>
-            <button>Меню</button>
-            <button>О нас</button>
+            <button id="home">Главная</button>
+            <button id="Menu">Меню</button>
+            <button id="About">О нас</button>
         </nav>
     </header>
+    
+    <main>
+        <div id="content">
 
-    <div id="content">ПОЧЕМУ ЭТО НЕ ОТОБРАЖАЕТСЯ?</div>
+        </div>
+    </main>
 
     <footer>
         made by <a href="https://github.com/Alexandra-Vikhareva">Vikhareva Alexandra</a> 2025
     </footer>
-    
+
 </body>
 </html>
