--- a/src/template.html
+++ b/src/template.html
@@ -10,8 +10,8 @@
         <h1>Вкусные истории</h1>
         <nav>
             <button id="home">Главная</button>
-            <button id="Menu">Меню</button>
-            <button id="About">О нас</button>
+            <button id="menu">Меню</button>
+            <button id="about">О нас</button>
         </nav>
     </header>
     
